# bmn_probability

./: CMakeLists.txt  PidFunctions.root  Qa.root  README.md  findProbabilities.cpp  findProbabilitiesDiffTypes.cpp  functionsFit.cpp  main.cpp  pidFunctions.cpp
src/: DrawingFunctions.cpp  ParticleFitData.cpp  Pid.cpp  PidFit.cpp  PidProbability.cpp  PidProbabilityDiffTypes.cpp
